--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "464d4add-79c6-4c47-b2e1-cfa0faf54025"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
