--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "5a5527ee-af8b-4470-b80f-1e439a05abc3"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
