--- a/angular.json
+++ b/angular.json
@@ -1,8 +1,5 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "cli": {
-    "analytics": "2070d2d7-1724-4b99-aa00-9f354f91c5c2"
-  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
@@ -29,7 +26,8 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "es5BrowserSupport": true
           },
           "configurations": {
             "production": {
